# neostow-c

./: .clang-format  CMakeLists.txt  README.md  compile_flags.txt  justfile  neostow.c
docs/: neostow.1
include/: autocomplete.h
test/: .neostow
